tests/e2e/keywords/if_is_keyword.error
Error: syntax error in story at line 1, column 4

1|    if = 1
         ^

E0041: `=` is not allowed here
